# smkflow

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  algebra.cpp  index.html  minimal.cpp  perftest.cpp  style.css  widget_gallery.cpp
examples/assets/: CMakeLists.txt  asset.hpp.in
include/smkflow/: Board.hpp  Constants.hpp  CursorCapture.hpp  Elements.hpp  JSON.hpp  Model.hpp  Widget.hpp
include/smkflow/widget/: Action.hpp  Box.hpp  Input.hpp  Label.hpp  Menu.hpp  Slider.hpp  Widget.hpp
src/smkflow/: BoardImpl.cpp  BoardImpl.hpp  Connector.cpp  Connector.hpp  ConnectorImpl.cpp  ConnectorImpl.hpp  Constants.hpp  CursorCapture.cpp  Node.cpp  Node.hpp  NodeImpl.cpp  NodeImpl.hpp  Slot.cpp  Slot.hpp  SlotImpl.cpp  SlotImpl.hpp  serialization_test.cpp  test.hpp
src/smkflow/widget/: BoxImpl.cpp  BoxImpl.hpp  InputBoxImpl.cpp  InputImpl.cpp  LabelImpl.cpp  LabelImpl.hpp  MenuEntryImpl.cpp  MenuImpl.cpp  MenuImpl.hpp  SliderImpl.cpp  Widget.cpp
tool/: format.sh  license_headers.cpp
